// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fabric renders a Fabric component correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders a Fabric component in RTL 1`] = `
<div>
  <div
    className=
        ms-Checkbox
        is-enabled
        {
          display: flex;
          position: relative;
        }
        &:hover .ms-Checkbox-checkbox {
          border-color: #323130;
        }
        @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
          border-color: Highlight;
        }
        &:focus .ms-Checkbox-checkbox {
          border-color: #323130;
        }
        &:hover .ms-Checkbox-checkmark {
          color: #605e5c;
          opacity: 1;
        }
        @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
          color: Highlight;
        }
        &:hover .ms-Checkbox-text {
          color: #201f1e;
        }
        &:focus .ms-Checkbox-text {
          color: #201f1e;
        }
  >
    <input
      aria-checked="false"
      aria-label="I am a default Checkbox"
      checked={false}
      className=

          {
            background: none;
            opacity: 0;
            position: absolute;
          }
          .ms-Fabric--isFocusVisible &:focus + label::before {
            outline-offset: 2px;
            outline: 1px solid #605e5c;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
            outline: 1px solid ActiveBorder;
          }
      id="checkbox-0"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <label
      className=
          ms-Checkbox-label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: flex-start;
            cursor: pointer;
            display: flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            position: relative;
            text-align: left;
            user-select: none;
          }
          &::before {
            bottom: 0px;
            content: "";
            left: 0px;
            pointer-events: none;
            position: absolute;
            right: 0px;
            top: 0px;
          }
      htmlFor="checkbox-0"
    >
      <div
        className=
            ms-Checkbox-checkbox
            {
              align-items: center;
              border-radius: 2px;
              border: 1px solid #323130;
              box-sizing: border-box;
              display: flex;
              flex-shrink: 0;
              height: 20px;
              justify-content: center;
              margin-right: 4px;
              overflow: hidden;
              position: relative;
              transition-duration: 200ms;
              transition-property: background, border, border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-Checkbox-checkmark
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #ffffff;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                opacity: 0;
                speak: none;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                color: Window;
              }
          data-icon-name="CheckMark"
        >
          
        </i>
      </div>
      <span
        aria-hidden="true"
        className=
            ms-Checkbox-text
            {
              color: #323130;
              font-size: 14px;
              line-height: 20px;
              margin-left: 4px;
            }
      >
        I am a default Checkbox
      </span>
    </label>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className=
          ms-Checkbox
          is-enabled
          {
            display: flex;
            position: relative;
          }
          &:hover .ms-Checkbox-checkbox {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
            border-color: Highlight;
          }
          &:focus .ms-Checkbox-checkbox {
            border-color: #323130;
          }
          &:hover .ms-Checkbox-checkmark {
            color: #605e5c;
            opacity: 1;
          }
          @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
            color: Highlight;
          }
          &:hover .ms-Checkbox-text {
            color: #201f1e;
          }
          &:focus .ms-Checkbox-text {
            color: #201f1e;
          }
    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        className=

            {
              background: none;
              opacity: 0;
              position: absolute;
            }
            .ms-Fabric--isFocusVisible &:focus + label::before {
              outline-offset: 2px;
              outline: 1px solid #605e5c;
            }
            @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
              outline: 1px solid ActiveBorder;
            }
        id="checkbox-1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: flex-start;
              cursor: pointer;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              position: relative;
              text-align: left;
              user-select: none;
            }
            &::before {
              bottom: 0px;
              content: "";
              left: 0px;
              pointer-events: none;
              position: absolute;
              right: 0px;
              top: 0px;
            }
        htmlFor="checkbox-1"
      >
        <div
          className=
              ms-Checkbox-checkbox
              {
                align-items: center;
                border-radius: 2px;
                border: 1px solid #323130;
                box-sizing: border-box;
                display: flex;
                flex-shrink: 0;
                height: 20px;
                justify-content: center;
                margin-right: 4px;
                overflow: hidden;
                position: relative;
                transition-duration: 200ms;
                transition-property: background, border, border-color;
                transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                width: 20px;
              }
        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  color: #ffffff;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  opacity: 0;
                  speak: none;
                }
                @media screen and (-ms-high-contrast: active){& {
                  -ms-high-contrast-adjust: none;
                  color: Window;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text
              {
                color: #323130;
                font-size: 14px;
                line-height: 20px;
                margin-left: 4px;
              }
        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className=
            ms-Checkbox
            is-enabled
            {
              display: flex;
              position: relative;
            }
            &:hover .ms-Checkbox-checkbox {
              border-color: #323130;
            }
            @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
              border-color: Highlight;
            }
            &:focus .ms-Checkbox-checkbox {
              border-color: #323130;
            }
            &:hover .ms-Checkbox-checkmark {
              color: #605e5c;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
              color: Highlight;
            }
            &:hover .ms-Checkbox-text {
              color: #201f1e;
            }
            &:focus .ms-Checkbox-text {
              color: #201f1e;
            }
      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          className=

              {
                background: none;
                opacity: 0;
                position: absolute;
              }
              .ms-Fabric--isFocusVisible &:focus + label::before {
                outline-offset: 2px;
                outline: 1px solid #605e5c;
              }
              @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
                outline: 1px solid ActiveBorder;
              }
          id="checkbox-2"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                align-items: flex-start;
                cursor: pointer;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                position: relative;
                text-align: right;
                user-select: none;
              }
              &::before {
                bottom: 0px;
                content: "";
                left: 0px;
                pointer-events: none;
                position: absolute;
                right: 0px;
                top: 0px;
              }
          htmlFor="checkbox-2"
        >
          <div
            className=
                ms-Checkbox-checkbox
                {
                  align-items: center;
                  border-radius: 2px;
                  border: 1px solid #323130;
                  box-sizing: border-box;
                  display: flex;
                  flex-shrink: 0;
                  height: 20px;
                  justify-content: center;
                  margin-left: 4px;
                  overflow: hidden;
                  position: relative;
                  transition-duration: 200ms;
                  transition-property: background, border, border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #ffffff;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    opacity: 0;
                    speak: none;
                  }
                  @media screen and (-ms-high-contrast: active){& {
                    -ms-high-contrast-adjust: none;
                    color: Window;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text
                {
                  color: #323130;
                  font-size: 14px;
                  line-height: 20px;
                  margin-right: 4px;
                }
          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className=
              ms-Checkbox
              is-enabled
              {
                display: flex;
                position: relative;
              }
              &:hover .ms-Checkbox-checkbox {
                border-color: #323130;
              }
              @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkbox {
                border-color: Highlight;
              }
              &:focus .ms-Checkbox-checkbox {
                border-color: #323130;
              }
              &:hover .ms-Checkbox-checkmark {
                color: #605e5c;
                opacity: 1;
              }
              @media screen and (-ms-high-contrast: active){&:hover .ms-Checkbox-checkmark {
                color: Highlight;
              }
              &:hover .ms-Checkbox-text {
                color: #201f1e;
              }
              &:focus .ms-Checkbox-text {
                color: #201f1e;
              }
        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            className=

                {
                  background: none;
                  opacity: 0;
                  position: absolute;
                }
                .ms-Fabric--isFocusVisible &:focus + label::before {
                  outline-offset: 2px;
                  outline: 1px solid #605e5c;
                }
                @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus + label::before {
                  outline: 1px solid ActiveBorder;
                }
            id="checkbox-3"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: flex-start;
                  cursor: pointer;
                  display: flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  position: relative;
                  text-align: left;
                  user-select: none;
                }
                &::before {
                  bottom: 0px;
                  content: "";
                  left: 0px;
                  pointer-events: none;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                }
            htmlFor="checkbox-3"
          >
            <div
              className=
                  ms-Checkbox-checkbox
                  {
                    align-items: center;
                    border-radius: 2px;
                    border: 1px solid #323130;
                    box-sizing: border-box;
                    display: flex;
                    flex-shrink: 0;
                    height: 20px;
                    justify-content: center;
                    margin-right: 4px;
                    overflow: hidden;
                    position: relative;
                    transition-duration: 200ms;
                    transition-property: background, border, border-color;
                    transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                    width: 20px;
                  }
            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: #ffffff;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      opacity: 0;
                      speak: none;
                    }
                    @media screen and (-ms-high-contrast: active){& {
                      -ms-high-contrast-adjust: none;
                      color: Window;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text
                  {
                    color: #323130;
                    font-size: 14px;
                    line-height: 20px;
                    margin-left: 4px;
                  }
            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component with applyTheme correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders as a span using the "as" prop 1`] = `
<span
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
/>
`;
